fix horizontal scroll?

--- a/_stylesheets/header.css
+++ b/_stylesheets/header.css
@@ -11,7 +11,6 @@
 #logo a {
   display: block;
   text-indent: -999px;
-  width: 400px;
   height: 138px;
   overflow: hidden;
   background: url('../images/ucla-1x.png') no-repeat;
